<resources>
    <string name="app_name">Portfolio Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Performance Portfolio Management</string>
    <string name="title_activity_main">activity_main</string>

    <string name="annualised_return">Annualised Returns:</string>
    <string name="annualised_volatility">Annualised Volatility:</string>
    <string name="enter_ticker_hint">Enter Ticker</string>
    <string name="add">Add</string>
    <string name="download">Download</string>
    <string name="calculate">Calculate</string>
    <string name="clear_all">Clear All</string>
    <string name="update">Update</string>

    <string name="token"><INPUT YOUR OWN TOKEN HERE></string>
    <string name="api_url">https://finnhub.io/api/v1/stock/candle\?symbol=%1$s&amp;resolution=D&amp;from=1625097601&amp;to=1640995199&amp;token=%2$s</string>
    <string name="percentage_format">%.1f%%</string>
</resources>
